# my-raylib-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
src/: main.cpp
